<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- HEADER IMAGE -->
    <ImageView
        android:id="@+id/imgicon"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:scaleType="fitCenter"
        android:src="@drawable/chatgptrssm"
        android:contentDescription="@string/app_name"/>

    <!-- SCROLL AREA -->
    <ScrollView
        android:id="@+id/scroll_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imgicon"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- NIP -->
            <EditText
                android:id="@+id/edit_nip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/input_nipLogin"
                android:background="@drawable/circle_username"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="textAutoComplete"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/poppins_regular"/>

            <!-- PASSWORD -->


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_pass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/masukkan_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:background="@drawable/circle_password"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/poppins_regular"/>

                <ImageView
                    android:id="@+id/img_showpass_login1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_visibility_off_black_24dp"/>

                <ImageView
                    android:id="@+id/img_showpass_login2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </RelativeLayout>
            <!-- LOGIN BUTTON -->
            <androidx.cardview.widget.CardView
                android:id="@+id/btnlogin"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:onClick="ceklogin"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/dot_dark_screen3"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/masuk"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_regular"/>
            </androidx.cardview.widget.CardView>

            <!-- SIGN UP -->
            <TextView
                android:id="@+id/txt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:onClick="signup"
                android:padding="12dp"
                android:text="@string/haven_t_password"
                android:textColor="@color/dot_dark_screen3"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <!-- BANTUAN -->
            <TextView
                android:id="@+id/txt_bantuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:onClick="bantuan"
                android:padding="12dp"
                android:text="@string/call_us_nforgot_password"
                android:textColor="@color/merah"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <!-- INFO VERSI -->
            <TextView
                android:id="@+id/txt_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_regular"/>

            <!-- INFO PEMBUAT -->
            <TextView
                android:id="@+id/txt_creator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_regular"/>

        </LinearLayout>
    </ScrollView>
    <!-- LOADING OVERLAY -->
    <RelativeLayout
        android:id="@+id/frame_loading_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        android:visibility="gone">

        <ImageView
            android:id="@+id/gmbar_loading_login"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo" />
    </RelativeLayout>
</RelativeLayout>